crates/kirin-derive-core/src/snapshots/kirin_derive_core__field_mut__tests__arith_enum.snap
---
source: crates/kirin-derive-core/src/field_mut.rs
expression: "rustfmt(derive_accessor_mut!(&input, \"regions\", Region, HasRegions))"
---
impl<'a, T> ::kirin::ir::HasRegions<'a> for ArithInstruction<T> {
    type Iter = ArithInstructionRegionsIterMut<'a>;
    fn regions(&'a mut self) -> Self::Iter {
        match self {
            ArithInstruction::Add(field_0, field_1, field_2, field_3, ..) => {
                ArithInstructionRegionsIterMut::Add(
                    std::iter::empty::<&'a mut ::kirin::ir::Region>(),
                )
            }
            ArithInstruction::Sub(field_0, field_1, field_2, field_3, ..) => {
                ArithInstructionRegionsIterMut::Sub(
                    std::iter::empty::<&'a mut ::kirin::ir::Region>(),
                )
            }
            ArithInstruction::Mul(field_0, field_1, field_2, ..) => {
                ArithInstructionRegionsIterMut::Mul(
                    std::iter::empty::<&'a mut ::kirin::ir::Region>(),
                )
            }
            ArithInstruction::Div(field_0, field_1, field_2, ..) => {
                ArithInstructionRegionsIterMut::Div(
                    std::iter::empty::<&'a mut ::kirin::ir::Region>(),
                )
            }
        }
    }
}
pub enum ArithInstructionRegionsIterMut<'a> {
    Add(std::iter::Empty<&'a mut ::kirin::ir::Region>),
    Sub(std::iter::Empty<&'a mut ::kirin::ir::Region>),
    Mul(std::iter::Empty<&'a mut ::kirin::ir::Region>),
    Div(std::iter::Empty<&'a mut ::kirin::ir::Region>),
}
impl<'a> Iterator for ArithInstructionRegionsIterMut<'a> {
    type Item = &'a mut ::kirin::ir::Region;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            ArithInstructionRegionsIterMut::Add(iter) => iter.next(),
            ArithInstructionRegionsIterMut::Sub(iter) => iter.next(),
            ArithInstructionRegionsIterMut::Mul(iter) => iter.next(),
            ArithInstructionRegionsIterMut::Div(iter) => iter.next(),
        }
    }
}
