crates/kirin-derive-core/src/snapshots/kirin_derive_core__field_mut__tests__either_enum.snap
---
source: crates/kirin-derive-core/src/field_mut.rs
expression: generate(input)
---
impl<'a, T> kirin_ir::HasArguments<'a> for TestEnum<T> {
    type Iter = TestEnumArgumentsIterMut<'a, kirin_ir::SSAValue>;
    fn arguments(&'a mut self) -> Self::Iter {
        match self {
            TestEnum::VariantA { wrapped, .. } => TestEnumArgumentsIterMut::VariantA(
                <InnerStructA<T> as kirin_ir::HasArguments>::arguments(wrapped),
            ),
            TestEnum::VariantB(field_0, ..) => TestEnumArgumentsIterMut::VariantB(
                <InnerStructB as kirin_ir::HasArguments>::arguments(field_0),
            ),
            TestEnum::VariantC { a, c, .. } => {
                TestEnumArgumentsIterMut::VariantC(std::iter::once(a).chain(std::iter::once(c)))
            }
            TestEnum::VariantD(field_0, field_1, field_2, ..) => {
                TestEnumArgumentsIterMut::VariantD(
                    std::iter::once(field_0).chain(std::iter::once(field_2)),
                )
            }
        }
    }
}
pub enum TestEnumArgumentsIterMut<'a, T> {
    VariantA(<InnerStructA<T> as kirin_ir::HasArguments<'a>>::Iter),
    VariantB(<InnerStructB as kirin_ir::HasArguments<'a>>::Iter),
    VariantC(
        std::iter::Chain<
            std::iter::Once<&'a kirin_ir::SSAValue>,
            std::iter::Once<&'a kirin_ir::SSAValue>,
        >,
    ),
    VariantD(
        std::iter::Chain<
            std::iter::Once<&'a mut kirin_ir::SSAValue>,
            std::iter::Once<&'a mut kirin_ir::SSAValue>,
        >,
    ),
}
impl<'a, T> Iterator for TestEnumArgumentsIterMut<'a, T> {
    type Item = &'a mut kirin_ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            TestEnumArgumentsIterMut::VariantA(iter) => iter.next(),
            TestEnumArgumentsIterMut::VariantB(iter) => iter.next(),
            TestEnumArgumentsIterMut::VariantC(iter) => iter.next(),
            TestEnumArgumentsIterMut::VariantD(iter) => iter.next(),
        }
    }
}
