crates/kirin-derive-core/src/snapshots/kirin_derive_core__field_mut__tests__global_enum_wrapper.snap
---
source: crates/kirin-derive-core/src/field_mut.rs
expression: generate(input)
---
impl<'a, T> ::kirin::ir::HasArguments<'a> for TestEnum<T> {
    type Iter = TestEnumArgumentsIterMut<'a>;
    fn arguments(&'a mut self) -> Self::Iter {
        match self {
            TestEnum::VariantA { wrapped, .. } => TestEnumArgumentsIterMut::VariantA(
                <InnerStructA<T> as HasArguments>::arguments(wrapped),
            ),
            TestEnum::VariantB(field_0, ..) => TestEnumArgumentsIterMut::VariantB(
                <InnerStructB as HasArguments>::arguments(field_0),
            ),
        }
    }
}
pub enum TestEnumArgumentsIterMut<'a, T> {
    VariantA(<InnerStructA<T> as HasArguments<'a>>::Iter),
    VariantB(<InnerStructB as HasArguments<'a>>::Iter),
}
impl<'a, T> Iterator for TestEnumArgumentsIterMut<'a, T> {
    type Item = &'a mut ::kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            TestEnumArgumentsIterMut::VariantA(iter) => iter.next(),
            TestEnumArgumentsIterMut::VariantB(iter) => iter.next(),
        }
    }
}
