crates/kirin-derive-core/src/snapshots/kirin_derive_core__field_mut__tests__regular_struct-3.snap
---
source: crates/kirin-derive-core/src/field_mut.rs
expression: generate(input)
---
impl<'a, T> kirin_ir::HasArguments<'a> for TestStruct<T> {
    type Iter = std::iter::Chain<
        std::iter::Chain<
            std::iter::Once<&'a kirin_ir::SSAValue>,
            std::iter::Once<&'a kirin_ir::SSAValue>,
        >,
        std::slice::Iter<'a, kirin_ir::SSAValue>,
    >;
    fn arguments(&'a mut self) -> Self::Iter {
        let Self { a, b, c, .. } = self;
        std::iter::once(a).chain(std::iter::once(b)).chain(c.iter())
    }
}
