crates/kirin-derive-core/src/snapshots/kirin_derive_core__field_mut__tests__unnamed_struct_regular.snap
---
source: crates/kirin-derive-core/src/field_mut.rs
expression: generate(input)
---
impl<'a> kirin_ir::HasArguments<'a> for TestStruct {
    type Iter = std::iter::Chain<
        std::iter::Chain<
            std::iter::Once<&'a mut kirin_ir::SSAValue>,
            std::iter::Once<&'a mut kirin_ir::SSAValue>,
        >,
        std::iter::Once<&'a mut kirin_ir::SSAValue>,
    >;
    fn arguments(&'a mut self) -> Self::Iter {
        let Self(field_0, field_1, field_2, ..) = self;
        std::iter::once(field_0)
            .chain(std::iter::once(field_1))
            .chain(std::iter::once(field_2))
    }
}
